[package]
name = "mxml_dep"
version = "0.0.1"
authors = ["Andrew <andrew@subarctic.org>"]
license = "MIT OR Apache-2.0"
description = "Mixin Markup Language runtime dependencies"
edition = "2018"
readme = "README.md"
repository = "https://github.com/andrew-johnson-4/mxml_dep"
keywords = ["xml","html","templating","library"]
